---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 17. 08. 2025
  Optimizations:
    - Added event filters to reduce unnecessary event processing for better performance
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 16. 08. 2025
  Bugfixes:
    - Fixed a crash when entity cloning fails during cross-mod interactions
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 15. 08. 2025
  Bugfixes:
    - Fixed a crash that could occur when entities reached the quality limit (Thank you Xaal!!)
    - Fixed the hotkey for entity inspection (Control+Shift+Q)
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 15. 08. 2025
  Features:
    - Added support for additional turret types: ammo-turret, electric-turret, and fluid-turret
  Ease of use:
    - Clarified aggregate notification setting to indicate 5-minute display frequency
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 15. 08. 2025
  Bugfixes:
    - Fixed an issue with secondary entity rate tracking that could apply updates too frequently
  Ease of use:
    - Added tests and validation scripts for mod authors and contributors
    - The quality-control-init command now preserves machine progress instead of resetting it to zero
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 13. 08. 2025
  Bugfixes:
    - Fixed an issue with the secondary entity change rate being affected by ticks between processing
    - Secondary entities now upgrade at consistent rates regardless of batch processing interval
---------------------------------------------------------------------------------------------------