@@ -83,3 +83,4 @@ attempts-to-change=  Quality changes attempted:       __1__
 current-chance=  Next attempt's likelihood to work:  __1__%
 manufacturing-hours=  Manufacturing hours:              __1__ / __2__
 progress-to-next=  Progress to next attempt:          __1__%
+entity-not-tracked-reason=Entity is __1__ and no longer tracked.
