@@ -82,8 +82,6 @@ function notifications.show_entity_quality_info(player, is_tracked_type, get_ent
   end
 
   local entity_info = get_entity_info(selected_entity)
-  local is_primary_type = entity_info.is_primary
-  local current_recipe = is_primary_type and selected_entity.get_recipe and selected_entity.get_recipe()
 
   -- Build info message parts
   local info_parts = {}
@@ -91,23 +89,33 @@ function notifications.show_entity_quality_info(player, is_tracked_type, get_ent
   -- Basic entity info
   table.insert(info_parts, {"quality-control.entity-info-header", selected_entity.localised_name or selected_entity.name, selected_entity.quality.localised_name})
 
-  -- Attempts to change
-  table.insert(info_parts, {"quality-control.attempts-to-change", entity_info.attempts_to_change})
+  -- Check if entity_info is an error code (string) instead of a table
+  if type(entity_info) == "string" then
+    -- Entity can't change quality - show simple message
+    table.insert(info_parts, {"quality-control.entity-not-tracked-reason", entity_info})
+  else
+    -- Normal entity_info table - show tracking data
+    local is_primary_type = entity_info.is_primary
+    local current_recipe = is_primary_type and selected_entity.get_recipe and selected_entity.get_recipe()
 
-  -- Current chance of change
-  table.insert(info_parts, {"quality-control.current-chance", string.format("%.2f", entity_info.chance_to_change)})
+    -- Attempts to change
+    table.insert(info_parts, {"quality-control.attempts-to-change", entity_info.attempts_to_change})
 
-  -- Progress to next attempt (for primary types with manufacturing hours)
-  if is_primary_type and current_recipe then
-    local hours_needed = manufacturing_hours_for_change * (1 + quality_increase_cost) ^ selected_entity.quality.level
-    local recipe_time = current_recipe.prototype.energy
-    local current_hours = (selected_entity.products_finished * recipe_time) / 3600
-    local previous_hours = entity_info.manufacturing_hours or 0
-    local progress_hours = current_hours - previous_hours
-    local progress_percentage = math.min(100, (progress_hours / hours_needed) * 100)
+    -- Current chance of change
+    table.insert(info_parts, {"quality-control.current-chance", string.format("%.2f", entity_info.chance_to_change)})
 
-    table.insert(info_parts, {"quality-control.manufacturing-hours", string.format("%.2f", current_hours), string.format("%.2f", hours_needed)})
-    table.insert(info_parts, {"quality-control.progress-to-next", string.format("%.1f", progress_percentage)})
+    -- Progress to next attempt (for primary types with manufacturing hours)
+    if is_primary_type and current_recipe then
+      local hours_needed = manufacturing_hours_for_change * (1 + quality_increase_cost) ^ selected_entity.quality.level
+      local recipe_time = current_recipe.prototype.energy
+      local current_hours = (selected_entity.products_finished * recipe_time) / 3600
+      local previous_hours = entity_info.manufacturing_hours or 0
+      local progress_hours = current_hours - previous_hours
+      local progress_percentage = math.min(100, (progress_hours / hours_needed) * 100)
+
+      table.insert(info_parts, {"quality-control.manufacturing-hours", string.format("%.2f", current_hours), string.format("%.2f", hours_needed)})
+      table.insert(info_parts, {"quality-control.progress-to-next", string.format("%.1f", progress_percentage)})
+    end
   end
 
   -- Print all info
