@@ -3,6 +3,8 @@ Version: 1.1.3
 Date: 17. 08. 2025
   Optimizations:
     - Added event filters to reduce unnecessary event processing for better performance
+  Bugfixes:
+    - Fixed a crash when inspecting entities that can no longer change quality (at max/min quality limits)
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 16. 08. 2025
